--- a/action.yml
+++ b/action.yml
@@ -6,6 +6,9 @@ inputs:
     required: true
     description: The pattern describing the file paths to lint with Spectral
     default: '*.oas.{json,yml,yaml}'
+  api_host:
+    required: false
+    description: Host of the api documentation
   spectral_ruleset:
     required: false
     description: |
